Update for colors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,22 +1,22 @@
 :root {
-  --grass: green;
-  --bug: lime;
-  --dark: black;
-  --dragon: lavender;
-  --electric: yellow;
-  --fairy: pink;
-  --fighting: brown;
-  --fire: red;
-  --flying: aqua;
-  --ghost: purple;
-  --ground: beige;
-  --ice: teal;
-  --water: blue;
-  --normal: gray;
-  --poison:blueviolet;
-  --psychic:fuchsia;
-  --rock:chocolate;
-  --steel:silver;
+	--normal: #A8A77A;
+	--fire: #EE8130;
+	--water: #6390F0;
+	--electric: #F7D02C;
+	--grass: #7AC74C;
+	--ice: #96D9D6;
+	--fighting: #C22E28;
+	--poison: #A33EA1;
+	--ground: #E2BF65;
+	--flying: #A98FF3;
+	--psychic: #F95587;
+	--bug: #A6B91A;
+	--rock: #B6A136;
+	--ghost: #735797;
+	--dragon: #6F35FC;
+	--dark: #705746;
+	--steel: #B7B7CE;
+	--fairy: #D685AD;
 }
 
 html,
@@ -50,7 +50,9 @@ a {
 .pokemonGIF {
   z-index: 2;
 }
-
+.pokemonChoice Switch {
+  position:absolute;
+}
 .GIFBackground {
   position: fixed;
   right: 0px;
