--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,3 +86,80 @@ a {
   top: 25%;
   left: 45%;
 }
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login-square {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 300px;
+  background-color: #f0f0f0;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.login-header {
+  margin: 0;
+  padding-bottom: 20px;
+}
+
+.login-form {
+  width: 100%;
+}
+
+.login-form label,
+.login-form input,
+.login-form a {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.login-form input[type="submit"] {
+  margin-top: 20px;
+}
+
+.separator {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #000;
+  line-height: 0.1em;
+  margin: 10px 0 20px;
+}
+
+.separator span {
+  background: #f0f0f0;
+  padding: 0 10px;
+}
+
+.login {
+  cursor: pointer;
+  display: inline-block;
+}
+
+.login img {
+  vertical-align: middle;
+  margin-right: 5px;
+  width: 20px;
+  height: auto;
+}
+
+.logout {
+  cursor: pointer;
+}
+
+.welcome-message {
+  margin-left: 50px;
+  margin-top: 20px;
+}
+
+
+
